# VK_fetcher

./: README.md  pyproject.toml  setup.cfg
vk_parser/: __init__.py  args.py  config.py  db_worker.py  main.py  vk_fetcher.py
